# TDD-Pytest

./: .pre-commit-config.yaml  main.py  pyproject.toml  pytest.ini
backend/backend/: settings.py
backend/core/: __init__.py  repository.py
backend/core/domain_model/: entities.py  services.py  value_objects.py
backend/utils/: read_file.py
functional_tests/: test_main.py
src/tdd_project/: calculator.py
tests/: test_division_func.py  test_repository.py
tests/test_batch/: test_allocate.py  test_batches.py
tests/test_read_file/: conftest.py  test_read_from_file.py
tests/unit/: test_calculator.py
